# valdera-workspace-skills

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/skills/google-auth/: SKILL.md
.claude/skills/google-docs/: SKILL.md
.claude/skills/google-drive/: SKILL.md
.claude/skills/google-sheets/: SKILL.md
plugins/google-auth/skills/google-auth/: SKILL.md
projects/: README.md
scripts/: bigquery.py  docs.py  drive.py  get_token.py  gmail.py  google_client.py  sheets.py
